fixed vertical menu drop down spacing

--- a/src/components/ContentPages/ContentCardTemplate/ContentCardTemplate.module.css
+++ b/src/components/ContentPages/ContentCardTemplate/ContentCardTemplate.module.css
@@ -16,9 +16,10 @@
 
 .VertMenu {
     display: flex;
-    width: 300px;
+    width: 90%;
     padding: 20px;
     margin: auto;
+    /* margin-block-start: 3em; */
 }
 
 .Link {
